--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
 </head>
 <body>
+    <button onclick="initGame()">Start</button>
     <div id="container">
         <canvas id="gameCanvas" width=320 height=480>
         </canvas>
-        <script src="js/game.js"></script>
     </div>
-    <script src="main.js"></script>
+    <script src="js/main.js"></script>
+    <script src="js/game.js"></script>
 </body>
 </html>
