Reset button works without affecting Game over

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
 </head>
 <body>
-    <button onclick="initGame(this)">Start</button>
+    <button onclick="initGame(this)" id="startButton">Start</button>
     <div id="container">
         <canvas id="gameCanvas" width=320 height=480>
         </canvas>
