--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <body>
     <div>
         Game mode:  
-        <form id="gameMode">
-            <select>
+        <form>
+            <select id="gameMode" onchange="setDifficulty(this.value)">
                 <option value="normal">Normal</option>
                 <option value="advanced">Advanced</option>
                 <option value="endless">Endless</option>
@@ -28,5 +28,6 @@
         </canvas>
     </div>
     <script src="js/game.js"></script>
+
 </body>
 </html>
